FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

Release 941 on 18 nov 2010

* Fixed restore backup for state, village, farm and croft
* fixed backup for relation notice 2nd date part
* fixed restore for relation notice source
 
Release 938 on 17 nov 2010

* References in descendant report reworked

Release 936 on 15 nov 2010

* Image size info to Notice pane added
* Improvements to see also references for descendant report

Release 930 on 11 nov 2010

* sorting db window fix
* hiski import fixes

Release 925 on 10 nov 2010

* bugfixes to hiski haudatut and kastetut import
' fix of double names in database view

Release 922 on 8 nov 2010

* Added check to prevent update of identical consecutive names
  or occupations. Possibly an unresolved bug may create such
* Fixed bug with view manager  

Release 918 on 30 oct 2010

* Modified relatives lines in FamilyPanel
* Added email (@) from RESI tag to descendant lista
* Bugfixes

Release 913 on 21 oct 2010

* Multiple name editing serious bug fixed

Release 910 on 21 oct 2010

* Special handling added for Name types / and (
* Added list report for images

Release 903 on 19 oct 2010

* Gay marriages possibility added
* Bug fixes

Release 895 on 17 oct 2010

* Improvements of managing of relative notices
* Fixes to needle manager
* DropDown menu fix
* Added sql function to tools

Release 870 on 12 oct 2010

* Usability changes to menu and dialogs
* Refactoring of hiski import

Release 850 on 7 oct 2010

* Hiski pane opening/closing refactored
* Delete person command added to drop down menu

Release 846 on 6 oct 2010

* Hiski import refactored
* Some statistics added

Release 840 on 5 oct 2010

* Refactored Hiski kastetut and vihityt
* Added genealogy data statistics

Release 830 on 1 oct 2010

* fixed bug with search criteria

Release 824 on 28 sep 2010
