@@ -2,6 +2,10 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 943 on 21 nov 2010
+
+* removed add and delete notice button from noticepane, Added delete notice to toolbat
+
 Release 941 on 18 nov 2010
 
 * Fixed restore backup for state, village, farm and croft
